--- a/style.css
+++ b/style.css
@@ -15,19 +15,19 @@ body {
     margin: 0;
 }
 
-header{
+header {
     background-color: var(--primary-color);
     text-align: center;
     padding: 1px;
 }
 
-h1{
+h1 {
     font-size: 2rem;
     color: var(--bg-color);
     font-weight: 700;
 }
 
-nav{
+nav {
     display: flex;
     justify-content: center;
     font-weight: 400;
@@ -36,21 +36,25 @@ nav{
 nav a {
     text-decoration: none;
     color: var(--bg-color);
-    margin: 0 2 rem 1rem 0rem;
+    margin: 0 2rem 1rem 0rem;
     font-size: 1.2rem;
 }
 
 nav a:hover {
-   text-decoration: underline;
-   transform: scale(0.90);
-   transition: transform 0.1s;
+    text-decoration: underline;
+    transform: scale(0.90);
+    transition: transform 0.1s;
 }
 
-.graficos-container{
+.grafico {
+    margin-top: 3rem;
+}
+
+.graficos-container {
     margin: 5rem;
 }
 
-.graficos-container__texto{
+.graficos-container__texto {
     font-size: 1.3rem;
     text-align: center;
     padding: 2rem;
@@ -62,8 +66,7 @@ span {
     color: var(--secondary-color);
 }
 
-
-footer{
+footer {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,5 +75,4 @@ footer{
     width: 100%;
     height: 3rem;
     margin-top: 2rem;
-
 }
